--- a/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
+++ b/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
@@ -1,130 +1,145 @@
 .container {
-    max-width: 600px;
-    padding: 25px 30px;
-    border-radius: 12px;
-    box-shadow: 0 5px 15px rgb(0 0 0 / 0.1);
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100dvh;
+    padding: 40px 30px;
+    background: var(--background-color-container);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    gap: 25px 0;
 
-
-    h2 {
-        text-align: center;
-        font-size: 18px;
-        margin-bottom: 20px;
-        color: #ddd;
-    }
-
-    .steps-indicator {
+    .ng-cont1 {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        margin-bottom: 25px;
-    }
+        height: 25%;
 
-    .steps-indicator div {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        font-weight: 600;
-        color: #ddd;
-        gap: 10px;
-        font-size: 10px;
-
-        .ng-cont {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            flex-direction: row;
-            gap: 0;
-            cursor: default;
-            user-select: none;
-            transition: background-color 0.3s ease;
-            padding: 0 30px;
-
-            .ng-bola {
-                display: inline-block;
-                width: 25px;
-                height: 25px;
-                border-radius: 50%;
-                background-color: #ccc;
-                color: #555;
-                line-height: 25px;
-                text-align: center;
-            }
-
-            .ng-hr {
-                width: 40%;
-                height: 3px;
-                background-color: #ccc;
-            }
-
-
-            .ng-bola.active,
-            .ng-hr.active,
-            .ng-p.active {
-                background-color: #af72e9;
-                box-shadow: 0 0 8px rgb(125, 46, 143);
-                color: #ddd;
-            }
-        }
-
-    }
-
-
-
-
-
-
-    .form-step .ng-fieldset {
-        width: 245px;
-        padding: 2px;
-        border-radius: 5px;
-        margin-top: 20px;
-
-
-        legend {
-            font-size: 12px;
-            font-weight: 500;
+        h2 {
+            text-align: center;
+            font-size: 18px;
+            margin-bottom: 20px;
             color: #ddd;
         }
 
-        .ng-input {
-            background-color: transparent;
-            outline: none;
-            border: 0;
-            width: 100%;
-            height: 20px;
-            font-size: 12px;
-            color: #eee;
-        }
-
-        .ng-password-btn {
+        .steps-indicator {
             display: flex;
-            padding: 2px;
-
-            mat-icon {
-                cursor: pointer;
-                transform: scale(0.0.97);
-            }
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
         }
 
+        .steps-indicator div {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            font-weight: 600;
+            color: #ddd;
+            gap: 10px;
+            font-size: 10px;
+
+            .ng-cont {
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                flex-direction: row;
+                gap: 0;
+                cursor: default;
+                user-select: none;
+                transition: background-color 0.3s ease;
+                padding: 0 30px;
+
+                .ng-bola {
+                    display: inline-block;
+                    width: 25px;
+                    height: 25px;
+                    border-radius: 50%;
+                    background-color: #ccc;
+                    color: #555;
+                    line-height: 25px;
+                    text-align: center;
+                }
+
+                .ng-hr {
+                    width: 40%;
+                    height: 3px;
+                    background-color: #ddd;
+                }
 
 
+                .ng-bola.active,
+                .ng-hr.active,
+                .ng-p.active {
+                    background-color: #af5ffa;
+                    color: #ccc;
+                }
+            }
+
+            .ng-p.active {
+                color: #af5ffa;
+            }
+
+        }
     }
 
-    .ng-error {
-        width: 100%;
-        font-size: 12px;
-        color: #FF8401;
-        padding: 2px 5px;
+
+
+
+
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        gap: 15px 0;
+
+        .form-step .ng-fieldset {
+            width: 100%;
+            padding: 2px;
+            border-radius: 5px;
+            margin-top: 20px;
+
+
+            legend {
+                font-size: 12px;
+                font-weight: 500;
+                color: #ddd;
+            }
+
+            .ng-input {
+                background-color: transparent;
+                outline: none;
+                border: 0;
+                width: 100%;
+                height: 30px;
+                font-size: 12px;
+                color: #eee;
+            }
+
+            .ng-password-btn {
+                display: flex;
+                padding: 2px;
+
+                mat-icon {
+                    cursor: pointer;
+                    transform: scale(0.0.97);
+                }
+            }
+
+
+
+        }
+
+        .ng-error {
+            width: 100%;
+            font-size: 12px;
+            color: #FF8401;
+            padding: 2px 5px;
+        }
     }
 
 
     .buttons {
         display: flex;
         justify-content: space-between;
-        margin-top: 20px;
+        margin-top: 15px;
         gap: 0 15px;
 
 
@@ -132,7 +147,7 @@
             width: 100%;
             height: 35px;
             border-radius: 5px;
-            border: 1px solid #eee;
+            border: 1px solid #c8c8c8;
             cursor: pointer;
             font-family: var(--font-family);
             font-size: 14px;
@@ -143,12 +158,66 @@
         }
 
         .ng-btn:hover {
-            background-color: #c8c8c8;
+            background-color: #eee;
         }
 
         .ng-btn:active {
             transform: scale(0.97);
 
+        }
+    }
+}
+
+@media screen and (min-width:1024px) {
+    .ng-main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #F2F2F2;
+        width: 100%;
+        height: 100vh;
+        .container {
+            display: flex;
+            flex-direction: column;
+            width: 480px;
+            height: auto;
+            padding: 25px 30px;
+            background: var(--background-color-container);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 20px;
+            box-shadow: 0 1px 15px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 30px;
+
+            .ng-cont1 {
+                display: flex;
+                flex-direction: column;
+
+                h2 {
+                    text-align: center;
+                    font-size: 18px;
+                    margin-bottom: 20px;
+                    color: #ddd;
+                }
+
+                .steps-indicator {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    width: 100%;
+                    margin-bottom: 25px;
+                }
+
+                .steps-indicator div {
+                    display: flex;
+                    justify-content: space-between;
+                    width: 100%;
+                    font-weight: 600;
+                    color: #ddd;
+                    gap: 10px;
+                    font-size: 10px;
+
+                }
+            }
         }
     }
 }
