--- a/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
+++ b/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
@@ -1,187 +1,213 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100dvh;
-    padding: 40px 30px;
-    background: var(--background-color-container);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-    .ng-cont1 {
+.ng-main {
+        width: 100%;
+        background: var(--background-color-container);
+    .container {
         display: flex;
         flex-direction: column;
-        height: 25%;
+        justify-content: space-around;
+        padding: 50px 30px;
+        gap: 3rem;
+        height: 100dvh;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-        h2 {
-            text-align: center;
-            font-size: 18px;
-            margin-bottom: 20px;
-            color: #ddd;
-        }
-
-        .steps-indicator {
+        .ng-cont1 {
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            width: 100%;
-        }
+            height: 20%;
 
-        .steps-indicator div {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            font-weight: 600;
-            color: #ddd;
-            gap: 10px;
-            font-size: 10px;
-
-            .ng-cont {
-                display: flex;
-                justify-content: space-around;
-                align-items: center;
-                flex-direction: row;
-                gap: 0;
-                cursor: default;
-                user-select: none;
-                transition: background-color 0.3s ease;
-                padding: 0 30px;
-
-                .ng-bola {
-                    display: inline-block;
-                    width: 25px;
-                    height: 25px;
-                    border-radius: 50%;
-                    background-color: #ccc;
-                    color: #555;
-                    line-height: 25px;
-                    text-align: center;
-                }
-
-                .ng-hr {
-                    width: 40%;
-                    height: 3px;
-                    background-color: #ddd;
-                }
-
-
-                .ng-bola.active,
-                .ng-hr.active,
-                .ng-p.active {
-                    background-color: #af5ffa;
-                    color: #ccc;
-                }
-            }
-
-            .ng-p.active {
-                color: #af5ffa;
-            }
-
-        }
-    }
-
-
-
-
-
-    form {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 100%;
-        gap: 15px 0;
-
-        .form-step .ng-fieldset {
-            width: 100%;
-            padding: 2px;
-            border-radius: 5px;
-            margin-top: 20px;
-
-
-            legend {
-                font-size: 12px;
-                font-weight: 500;
+            h2 {
+                text-align: center;
+                font-size: 18px;
+                margin-bottom: 20px;
                 color: #ddd;
             }
 
-            .ng-input {
-                background-color: transparent;
-                outline: none;
-                border: 0;
+            .steps-indicator {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
                 width: 100%;
-                height: 30px;
-                font-size: 12px;
-                color: #eee;
             }
 
-            .ng-password-btn {
+            .steps-indicator div {
                 display: flex;
-                padding: 2px;
+                justify-content: space-between;
+                width: 100%;
+                font-weight: 500;
+                color: #ddd;
+                gap: 10px;
+                font-size: 8px;
 
-                mat-icon {
-                    cursor: pointer;
-                    transform: scale(0.0.97);
+                .ng-cont {
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: center;
+                    flex-direction: row;
+                    gap: 0;
+                    cursor: default;
+                    user-select: none;
+                    transition: background-color 0.3s ease;
+                    padding: 0 30px;
+
+
+                    .ng-bola {
+                        display: inline-block;
+                        width: 20px;
+                        height: 20px;
+                        border-radius: 50%;
+                        background-color: #ccc;
+                        font-weight: 600;
+                        color: #555;
+                        line-height: 20px;
+                        text-align: center;
+                    }
+
+                    .ng-hr {
+                        width: 45%;
+                        height: 3px;
+                        background-color: #ddd;
+                    }
+
+
+                    .ng-bola.active,
+                    .ng-hr.active,
+                    .ng-p.active {
+                        background-color: #af5ffa;
+                        color: #ccc;
+                    }
+                }
+
+                .ng-p.active {
+                    color: #af5ffa;
+                }
+
+            }
+        }
+
+
+
+
+
+        form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 100%;
+            gap: 10px 0;
+
+            .form-step .ng-fieldset {
+                width: 100%;
+                padding: 2px;
+                border-radius: 5px;
+                margin-top: 20px;
+
+                legend {
+                    font-size: 12px;
+                    font-weight: 500;
+                    color: #ddd;
+                }
+
+                .ng-input {
+                    background-color: transparent;
+                    outline: none;
+                    border: 0;
+                    width: 100%;
+                    height: 30px;
+                    font-size: 12px;
+                    color: #eee;
+                }
+
+                .ng-input::placeholder {
+                    color: #999;
+                    font-size: 13px;
+                    padding-left: 10px;
+                }
+
+                .ng-password-btn {
+                    display: flex;
+                    padding: 2px;
+
+                    mat-icon {
+                        cursor: pointer;
+                        transform: scale(0.0.97);
+                    }
+                }
+
+
+
+            }
+
+            .ng-listForm {
+                display: flex;
+                justify-content: space-between;
+                gap: 0 15px;
+                
+                div {
+                    flex: 1;
                 }
             }
 
-
-
+            .ng-error {
+                width: 100%;
+                font-size: 12px;
+                color: #FF8401;
+                padding: 2px 5px;
+            }
         }
 
-        .ng-error {
-            width: 100%;
-            font-size: 12px;
-            color: #FF8401;
-            padding: 2px 5px;
-        }
-    }
+
+        .buttons {
+            display: flex;
+            justify-content: space-between;
+            gap: 0 15px;
+            margin-top: 15px;
 
 
-    .buttons {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 15px;
-        gap: 0 15px;
+            .ng-btn {
+                width: 100%;
+                height: 35px;
+                border-radius: 5px;
+                border: 1px solid #c8c8c8;
+                cursor: pointer;
+                font-family: var(--font-family);
+                font-size: 14px;
+                font-weight: 500;
+                color: #592d74;
+                margin-top: 20px;
+            }
 
+            .ng-btn:hover {
+                background-color: #eee;
+            }
 
-        .ng-btn {
-            width: 100%;
-            height: 35px;
-            border-radius: 5px;
-            border: 1px solid #c8c8c8;
-            cursor: pointer;
-            font-family: var(--font-family);
-            font-size: 14px;
-            font-weight: 500;
-            color: #592d74;
-            margin-top: 20px;
+            .ng-btn:active {
+                transform: scale(0.97);
 
-        }
+            }
 
-        .ng-btn:hover {
-            background-color: #eee;
-        }
-
-        .ng-btn:active {
-            transform: scale(0.97);
-
+            .ng-btn:disabled {
+                color: #888;
+            }
         }
     }
 }
-
-@media screen and (min-width:1024px) {
+// 
+@media screen and (min-width:730px) {
     .ng-main {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #F2F2F2;
+        background: #F2F2F2;
         width: 100%;
         height: 100vh;
+
         .container {
             display: flex;
             flex-direction: column;
-            width: 480px;
+            width: 530px;
             height: auto;
             padding: 25px 30px;
+            gap: 10px;
             background: var(--background-color-container);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 20px;
@@ -216,7 +242,26 @@
                     gap: 10px;
                     font-size: 10px;
 
+
+
+                    .ng-cont {
+                        gap: 0;
+
+                        .ng-bola {
+                            width: 30px;
+                            height: 30px;
+                            border-radius: 50%;
+                            line-height: 30px;
+                        }
+
+
+                        .ng-hr {
+                            width: 40%;
+                            height: 3px;
+                        }
+                    }
                 }
+
             }
         }
     }
