--- a/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
+++ b/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
@@ -1,19 +1,20 @@
 .ng-main {
         width: 100%;
+        height: 100dvh;
         background: var(--background-color-container);
+        overflow: auto;
     .container {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        padding: 50px 30px;
-        gap: 3rem;
-        height: 100dvh;
+        padding: 30px;
+        gap: 2rem;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
         .ng-cont1 {
             display: flex;
             flex-direction: column;
-            height: 20%;
+            height: 25%;
 
             h2 {
                 text-align: center;
@@ -92,14 +93,14 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            height: 100%;
+            width: 100%;
             gap: 10px 0;
 
             .form-step .ng-fieldset {
                 width: 100%;
                 padding: 2px;
                 border-radius: 5px;
-                margin-top: 20px;
+                margin-top: 15px;
 
                 legend {
                     font-size: 12px;
@@ -160,7 +161,6 @@
             display: flex;
             justify-content: space-between;
             gap: 0 15px;
-            margin-top: 15px;
 
 
             .ng-btn {
