--- a/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
+++ b/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
@@ -3,6 +3,7 @@
         height: 100dvh;
         background: var(--background-color-container);
         overflow: auto;
+        position: fixed;
     .container {
         display: flex;
         flex-direction: column;
@@ -114,7 +115,7 @@
                     border: 0;
                     width: 100%;
                     height: 30px;
-                    font-size: 12px;
+                    font-size: 16px;
                     color: #eee;
                 }
 
