Corrigindo campos inputs e select signup, checkout02 e cadastro empresa 01

--- a/src/app/features/pages/planos/checkout02/checkoutPlanos02.component.html
+++ b/src/app/features/pages/planos/checkout02/checkoutPlanos02.component.html
@@ -30,7 +30,7 @@
                                 </select>
                                 <div class="ng-input-cpf">
                                     <input id="form-checkout__identificationNumber" formControlName="cpfCnpj"
-                                        [mask]="selected === 'cpf' ? '00000000000' : '00000000000000'" type="text"
+                                        [mask]="selected === 'cpf' ? '000.000.000-00' : '00.000.000/0000-00'" type="text"
                                         placeholder="Digite CPF ou CNPJ" class="input-full-width" />
 
                                     <div class="error" *ngIf="isRequired('cpfCnpj')">
