--- a/src/app/features/pages/planos/posCheckout/posCheckout.component.scss
+++ b/src/app/features/pages/planos/posCheckout/posCheckout.component.scss
@@ -6,12 +6,13 @@
     height: 100dvh;
     background-color: #F2F2F2;
     padding: 25px;
+    position: fixed;
 
     .container {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 2rem;
+        padding: 1rem;
         border-radius: 1rem;
         color: #ddd;
         background: var(--background-color-container);
@@ -29,14 +30,14 @@
     }
 
     h1 {
-        font-size: 18px;
+        font-size: 16px;
         color: #28a745;
         text-align: center;
     }
 
     .welcome {
-        font-size: 1.3rem;
-        margin-top: 1.5rem;
+        font-size: 1rem;
+        margin-top: 1rem;
         color: #fff;
     }
 
@@ -58,7 +59,6 @@
             border-radius: 10px;
             border: none;
             box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.2);
-            margin-bottom: 20px;
         }
 
         .ng-btn:hover {
@@ -81,7 +81,7 @@
 
     .card {
         padding: 1rem;
-        max-width: 600px;
+        max-width: 500px;
         gap: 1.2rem;
         box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
     }
