--- a/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
+++ b/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
@@ -102,11 +102,13 @@
                 padding: 2px;
                 border-radius: 5px;
                 margin-top: 15px;
+                border-color: #bbb;
 
                 legend {
                     font-size: 12px;
                     font-weight: 500;
-                    color: #ddd;
+                    color: #bbb;
+                    padding: 0 4px;
                 }
 
                 .ng-input {
@@ -121,7 +123,7 @@
 
                 .ng-input::placeholder {
                     color: #999;
-                    font-size: 13px;
+                    font-size: 14px;
                     padding-left: 10px;
                 }
 
