--- a/src/app/shared/component/form-signup/form-signup.component.scss
+++ b/src/app/shared/component/form-signup/form-signup.component.scss
@@ -69,6 +69,11 @@
                             font-size: 16px;
                             color: #eee;
                         }
+                        select option {
+                            color: #444;
+                            font-weight: 500;
+                            background-color: rgba(#592d74, 0.2);
+                        }
 
 
 
